# course-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: update_mcp_server.sh
src/course_mcp/: __init__.py  server.py
src/course_mcp/config/: __init__.py  config.py
src/course_mcp/mcp_schemas/: __init__.py  search.py
src/course_mcp/models/: course.py  file.py
src/course_mcp/services/: course_service.py  file_service.py  pdf_text_extractor.py
tests/: test_config.py  test_file_service.py  test_mcp_schemas.py  test_models.py  test_pdf_text_extractor.py  test_server.py
