[project]
name = "course-mcp"
version = "0.1.0"
description = "MCP server for referencing course files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "mcp>=1.28.1",
 "pypdf>=6.14.2",
]
[[project.authors]]
name = "mkslge"
email = "marklseeliger@gmail.com"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = [ "uv_build>=0.11.28,<0.12.0",]
build-backend = "uv_build"

[project.scripts]
course-mcp = "course_mcp:main"
